<resources>
    <string name="app_name">Electric</string>
    <string name="status_layout_manager_loading">Loading&#8230;</string>
    <string name="status_layout_manager_empty">Empty</string>
    <string name="status_layout_manager_error">Error</string>
    <string name="status_layout_manager_retry">Reload</string>


    <string name="toast_message">Toast message</string>

    <string name="normal_toast_with_icon" translatable="false">NORMAL TOAST (WITH ICON)</string>
    <string name="normal_toast_without_icon" translatable="false">NORMAL TOAST (WITHOUT ICON)</string>
    <string name="warning_toast" translatable="false">WARNING TOAST</string>
    <string name="info_toast" translatable="false">INFO TOAST</string>
    <string name="info_toast_with_formatting" translatable="false">INFO TOAST WITH FORMATTING</string>
    <string name="error_toast" translatable="false">ERROR TOAST</string>
    <string name="success_toast" translatable="false">SUCCESS TOAST</string>
    <string name="custom_configuration" translatable="false">CUSTOM CONFIGURATION</string>


    <string name="error_message">This is an error toast.</string>
    <string name="success_message">Success!</string>
    <string name="info_message">Here is some info for you.</string>
    <string name="warning_message">Beware of the dog.</string>
    <string name="normal_message_without_icon">Normal toast w/o icon</string>
    <string name="normal_message_with_icon">Normal toast w/ icon</string>
    <string name="custom_message" translatable="false">sudo kill -9 everyone</string>
    <string name="closet_layout">机柜布置</string>
    <string name="closet_1">1#</string>
    <string name="closet_2">2#</string>
    <string name="closet_3">3#</string>
    <string name="closet_4">4#</string>
    <string name="high_elec_closet_state">高压柜状态</string>
    <string name="breaker_layout">断路器位置</string>
    <string name="breaker_state">断路器状态</string>
    <string name="handcart_state">手车</string>
    <string name="hand_out">摇出</string>
    <string name="hand_in">摇入</string>
    <string name="elec_diagram">电路图</string>
    <string name="knife_video">接地刀视频</string>
    <string name="knife_state">接地刀状态</string>
    <string name="handcart_video">手车视频</string>
    <string name="remote">远程</string>
    <string name="local">就地</string>
    <string name="work">工作</string>
    <string name="test">实验</string>
    <string name="off">分闸</string>
    <string name="on">合闸</string>

</resources>
