<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dtelec.electric.viewModel.MainViewModel" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_main_bg"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/view_title"
            app:clickListener="@{clickListener}"
            app:title="@{viewModel.highElecDetailTitle}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_high_elec_closet"
                    style="@style/LeftTextHighElecClosetDetail"
                    android:text="@string/high_elec_closet_state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_high_elec_state"
                    style="@style/RightTextHighElecClosetDetail"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_high_elec_closet"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="远控" />

                <include
                    android:id="@+id/line1"
                    layout="@layout/line_1dp_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_breaker" />

                <TextView
                    android:id="@+id/tv_breaker"
                    style="@style/LeftTextHighElecClosetDetail"
                    android:text="@string/breaker_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_high_elec_closet" />

                <TextView
                    android:id="@+id/tv_breaker_layout"
                    style="@style/RightTextHighElecClosetDetail"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_breaker"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="远控" />

                <include
                    android:id="@+id/line2"
                    layout="@layout/line_1dp_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_breaker2" />

                <TextView
                    android:id="@+id/tv_breaker2"
                    style="@style/LeftTextHighElecClosetDetail"
                    android:text="@string/breaker_state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_breaker" />

                <TextView
                    android:id="@+id/tv_breaker_state"
                    style="@style/RightTextHighElecClosetDetail"
                    android:drawableRight="@mipmap/ic_arrow_right"
                    android:drawablePadding="10dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_breaker2"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="远控" />

                <TextView
                    android:id="@+id/tv_handcart"
                    style="@style/LeftTextHighElecClosetDetail"
                    android:layout_marginTop="8dp"
                    android:text="手车状态"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_breaker2" />

                <TextView
                    android:id="@+id/tv_handcart_state"
                    style="@style/RightTextHighElecClosetDetail"
                    android:drawableRight="@mipmap/ic_arrow_right"
                    android:drawablePadding="10dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_handcart"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="远控" />

                <include
                    android:id="@+id/line4"
                    layout="@layout/line_1dp_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_handcart2" />

                <TextView
                    android:id="@+id/tv_handcart2"
                    style="@style/LeftTextHighElecClosetDetail"
                    android:text="手车视频"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_handcart" />

                <TextView
                    android:id="@+id/tv_knife"
                    style="@style/LeftTextHighElecClosetDetail"
                    android:layout_marginTop="8dp"
                    android:text="接地刀状态"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_handcart2" />

                <TextView
                    android:id="@+id/tv_knife_state"
                    style="@style/RightTextHighElecClosetDetail"
                    android:drawablePadding="10dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_knife"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="远控" />

                <include
                    android:id="@+id/line5"
                    layout="@layout/line_1dp_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_knife2" />

                <TextView
                    android:id="@+id/tv_knife2"
                    style="@style/LeftTextHighElecClosetDetail"
                    android:text="接地刀视频"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_knife" />

                <TextView
                    android:id="@+id/tv_diagram"
                    style="@style/LeftTextHighElecClosetDetail"
                    android:layout_marginTop="8dp"
                    android:text="电路图"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_knife2" />

                <TextView
                    android:id="@+id/tv_diagram_detail"
                    style="@style/RightTextHighElecClosetDetail"
                    android:drawableRight="@mipmap/ic_arrow_right"
                    android:drawablePadding="10dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_diagram"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="远控" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>

</layout>
